version 1.9.12, in progress
- Improve structural integrity of model specification dialog
- Gnuplot version: require 4.4.0 or higher
- You can now use "bundle b = null" to create a new bundle or
  empty an existing one

2012-11-21 version 1.9.11
- Substantial re-write of code for handling named variables
  other than series (matrices, scalars, strings, etc.) in the
  interest of maintainability and efficiency
- "restrict" command: try to ensure that standard errors show
  as zero when they are in principle zero
- "loop": support use of $-substitution in the expression that
  controls a nested loop
- Fix bug: spurious detection of line continuation characters
  in #-style comments that do not start a command line
- Fix bug: "eval" not working correctly for anonymous strings
- Fix build bug: "make check" not working properly
- Fix build bug: XDG (desktop) files not getting installed in
  a manner suitable for packagers of gretl
- Support a matrix as an element-wise boolean condition for the 
  ternary "?" operator
- The msortby() function: ensure that it performs a "stable" 
  sort, such that rows sharing a common key value are never 
  interchanged
- The inbundle() function: return a code that identifies the
  type of a bundled item; also add typestr() function to turn
  this code into a string
- GUI: allow resizing of plot windows, using the "+", "-" and
  "0" keys (depends on gnuplot's pngcairo driver) 
- GUI: fix for "save as..." for session files on Windows
- GUI: fix for right-click in icon view window
- GUI: fix for font selector in the GTK 3 version of the code 

2012-11-05 version 1.9.10
- Update translations
- Major new command "join": this adds sophisticated procedures for 
  assembling a dataset from multiple sources
- New command "markers": manipulate observation marker strings
- "delete" command: add a --force option to permit deletion of
  series in loops (to be used with caution!)
- "data" command: allow this in loops